fix(hrui): Fix double flicker + double notif on wasm
(cherry picked from commit 35901212d88a7993f13a326e87f38545a7c5f04b)

# Conflicts:
#	src/Uno.UI.RemoteControl/Uno.UI.RemoteControl.Wasm.csproj

--- a/src/Uno.UI/WasmCSS/Uno.UI.css
+++ b/src/Uno.UI/WasmCSS/Uno.UI.css
@@ -277,3 +277,8 @@ input::-ms-clear {
   background: var(--selection-background);
   color: var(--selection-color);
 }
+
+/* Uno has it's own HR indicator, hide default indicator from dotnet. */
+#dotnet-hotreload-toast {
+  visibility: collapse
+}
